--- a/index.ipynb
+++ b/index.ipynb
@@ -264,9 +264,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "data",
+         "text": [],
+         "type": "scatter",
+         "uid": "68269742-2c9e-11e9-8d01-c91fc073be72",
+         "x": [
+          70,
+          80,
+          90
+         ],
+         "y": [
+          10852,
+          9690,
+          9128
+         ]
+        }
+       ],
+       "layout": {
+        "title": "RSS with changes to y-intercept",
+        "xaxis": {
+         "title": "y-intercept value"
+        },
+        "yaxis": {
+         "title": "RSS"
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"c54ad9af-e0e4-4a0f-b6ca-e107ab7a1ae8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c54ad9af-e0e4-4a0f-b6ca-e107ab7a1ae8\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"683d60f8-2c9e-11e9-8d01-c91fc073be72\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"c54ad9af-e0e4-4a0f-b6ca-e107ab7a1ae8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"c54ad9af-e0e4-4a0f-b6ca-e107ab7a1ae8\", [{\"mode\": \"lines\", \"name\": \"data\", \"text\": [], \"x\": [70, 80, 90], \"y\": [10852, 9690, 9128], \"type\": \"scatter\", \"uid\": \"683d60f8-2c9e-11e9-8d01-c91fc073be72\"}], {\"title\": \"RSS with changes to y-intercept\", \"xaxis\": {\"title\": \"y-intercept value\"}, \"yaxis\": {\"title\": \"RSS\"}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import init_notebook_mode, iplot\n",
